tests/e2e/when_invalid_action1.error
Error: syntax error in story at line 3, column 10

3|        when a listen path: "/" as r
               

E0144: No event listener with output `a` for event `listen`.
