tests/e2e/when_invalid_action1.story
a = 1
http server
    when a listen path: "/" as r
        r write content: "foobar"
